--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "moment-timezone": "^0.5.43",
+    "axios": "^1.6.0",
     "node-fetch": "^2.6.11",
     "node-schedule": "^2.1.1"
   },
