--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "moment-timezone": "^0.5.43",
     "axios": "^1.6.0",
     "node-fetch": "^2.6.11",
-    "node-schedule": "^2.1.1"
+    "node-schedule": "^2.1.1",
+    "@supabase/supabase-js": "^3.37.0"
   },
   "engines": {
     "node": ">=18"
