--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "node-fetch": "^2.6.11",
     "node-schedule": "^2.1.1",
     "@supabase/supabase-js": "^2.45.0",
-    "bcrypt": "^5.1.0"
-
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3"
   },
   "engines": {
     "node": ">=18"
