--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "node-schedule": "^2.1.1",
     "@supabase/supabase-js": "^2.45.0",
     "bcrypt": "^5.1.0",
-    "bcryptjs": "^2.4.3"
+    "bcryptjs": "^2.4.3",
+    "@google/generative-ai": "^0.21.0",
+    "octokit": "^4.0.2"
   },
   "engines": {
     "node": ">=18"
